# geckodrive

./: .gitignore  .travis.yml  README.md  README.rst  basic.py  geckorun.py  gogecko.py  pyproject.toml  requirements.txt  setup.cfg  setup.py  simple.py
.github/workflows/: ci.yml
geckodrive/: __init__.py  basic.py
test/: test.py
tests/: test.py  test_all.py
